--- a/Makefile.vita.SDL2_image
+++ b/Makefile.vita.SDL2_image
@@ -19,7 +19,9 @@ COMMON_OBJS = IMG.o \
 PREFIX  = arm-vita-eabi
 CC      = $(PREFIX)-gcc
 AR      = $(PREFIX)-gcc-ar
-CFLAGS  = -Wl,-q -Wall -O3 -Iinclude -I$(VITASDK)/arm-vita-eabi/include/SDL2
+CFLAGS  = -Wl,-q -Wall -O3 -Iinclude -I$(VITASDK)/arm-vita-eabi/include/SDL2 -DLOAD_BMP \
+				-DLOAD_GIF -DLOAD_LBM -DLOAD_PCX -DLOAD_PNM -DLOAD_TGA -DLOAD_XCF \
+				-DLOAD_XPM -DLOAD_XV -DLOAD_JPG -DLOAD_PNG
 ASFLAGS = $(CFLAGS)
 
 LIBS    += -lSDL2
